array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
    if(num[i - 1] < num[i])
               ^Island:7: error: ']' expected but '}' found.
  }
  ^